Extra space problem fixed
I fixed an issue where there is extra space under the footer. However, with mobile display, the extra space is caused by the social media feed.

--- a/css/styles.less
+++ b/css/styles.less
@@ -16,7 +16,6 @@
 @text-padding: 1em;
 
 /* --- Mobile Stylesheets --- */
-
 body {
     overflow-x: hidden;
     background-color: @black;
@@ -245,6 +244,13 @@ footer p {
 /* Desktop Stylesheets */
 
 @media only screen and (min-width: 1025px) {
+    html,
+    body,
+    main {
+        padding: 0;
+        margin: 0;
+    }
+
     #wrapper {
         padding-left: 5em;
         padding-right: 5em;
@@ -315,6 +321,10 @@ footer p {
 
     .weatherwidget-io {
         width: 21.4em;
+    }
+
+    footer {
+        margin-top: 5em;
     }
 
 }
